--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
-  - type: web bot
+  - type: web
     name: anonymous-chat-bot
     env: python
     plan: free
+    pythonVersion: 3.10
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
+    
