--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot==21.9
-Flask>=2.3,<3.0
-uvicorn==0.23.2
-python-dotenv==1.0.0
+Flask==3.0.3
+python-telegram-bot==20.7
+requests==2.32.3
